--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "token": "ODEzMTM2Nzk4NTQ0MDM1OTAw.YDK6qA.O3655w3IvjmmUTIn_WCrcsbLt9Q",
-    "prefix": "k",
-    "logs_commandes": "820738333482549318"
+    "token": "ODEzMTM2Nzk4NTQ0MDM1OTAw.YDK6qA.oW0wOqt4OnV89Bd0Njvt8Zyh5jc",
+    "prefix": "&",
+    "BotOwner": "692592271794634792"
 }
