retouche des code + ajouts
ajouts de la commandes server-icon

--- a/config.json
+++ b/config.json
@@ -1,5 +1,4 @@
 {
-    "token": "ODEzMTM2Nzk4NTQ0MDM1OTAw.YDK6qA.oW0wOqt4OnV89Bd0Njvt8Zyh5jc",
-    "prefix": "&",
-    "BotOwner": "692592271794634792"
+    "token": "ODEzMTM2Nzk4NTQ0MDM1OTAw.YDK6qA.GDcVZvt1pxe1KzYiKC7ZcYeYrIU",
+    "prefix": "&"
 }
